[gd_scene load_steps=4 format=3 uid="uid://c0206ge78ugrx"]

[ext_resource type="PackedScene" uid="uid://i720o5tc236e" path="res://cenas/fases/fase - 4 .tscn" id="1_2j22w"]
[ext_resource type="Script" path="res://proxima_fase.gd" id="1_f8fki"]
[ext_resource type="AudioStream" uid="uid://dfc721qmqpbke" path="res://sounds/Celebration Sound Effect (320).mp3" id="3_b84gu"]

[node name="TextureRect" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="back- fase4" parent="." instance=ExtResource("1_2j22w")]
layout_mode = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = ""
initial_position = 2
size = Vector2i(739, 418)
visible = true
borderless = true
dialog_text = "

                                                                              
                                                                             Parab√©ns! üéä
 
                          Voc√™ acertou pois a proposi√ß√£o 'P ‚Üí Q' √© uma implica√ß√£o l√≥gica,
onde 'P' representa a condi√ß√£o antecedente (se Plut√£o foi reclassificado como planeta an√£o) e
         'Q' representa a condi√ß√£o consequente (ent√£o a Lua √© o sat√©lite natural da Terra).

                                         Voc√™ est√° autorizado para entrar planeta Terra!üöÄ

                          Voc√™ conseguiu acertar todas as quest√µes e salvou o astronautaüë©‚ÄçüöÄ
                                              
                                                                              
"
script = ExtResource("1_f8fki")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_b84gu")
volume_db = -21.86
autoplay = true

[connection signal="confirmed" from="AcceptDialog" to="AcceptDialog" method="_on_acerto_4_play_pressed"]
